# gestalt-providers

./: .gestalt-sdk-version  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  provider-index.yaml
agent/claude/: README.md  manifest.yaml  provider.py  pyproject.toml
agent/claude/internals/: __init__.py  claude_code_config.py  claude_runner.py  config.py  mcp_bridge.py  mcp_server.py  migrations.py  provider_io.py  provider_requests.py  provider_responses.py  session_start.py  store.py  store_projection.py  store_records.py  store_retry.py  subject_id.py
agent/claude/schemas/: config.schema.yaml
agent/claude/tests/: fake_indexeddb.py  test_provider.py
agent/codex/: README.md  build.sh  manifest.yaml  provider.py  pyproject.toml
agent/codex/internals/: __init__.py  codex_runner.py  config.py  gestalt_mcp_bridge.py  http_bridge.py  session_start.py  store.py  subject_id.py  tool_bridge.py
agent/codex/schemas/: config.schema.yaml
agent/codex/tests/: test_provider.py
agent/hermes/: Cargo.toml  README.md  build.sh  manifest.yaml
agent/hermes/schemas/: config.schema.yaml
agent/hermes/src/: acp.rs  config.rs  lib.rs  main.rs  mcp_bridge.rs  store.rs
agent/hermes/tests/: provider_contract.rs
agent/simple/: Dockerfile.runtime  Dockerfile.runtime.dockerignore  README.md  manifest.yaml  provider.py  pyproject.toml
agent/simple/internals/: __init__.py  agent_proto_compat.py  config.py  litellm_backend.py  model_backend.py  orchestrator.py  store.py
agent/simple/schemas/: config.schema.yaml
agent/simple/tests/: test_provider.py
app/bigquery/: README.md  manifest.yaml  provider.py  pyproject.toml
app/github/: README.md  catalog.yaml  manifest.yaml  provider.py  pyproject.toml
app/github/internals/: agent.py  cache_ingest.py  cache_migrations.py  cache_store.py  cached_client.py  client.py  config.py  constants.py  identity.py  operations.py  policy_metadata.py  preferences.py  reconcile.py  review.py  webhook.py  workflow_dispatch.py
app/github/schemas/: config.schema.yaml
app/github/tests/: test_cache_ingest.py  test_cache_store.py  test_cached_client.py  test_provider.py  test_reconcile.py
app/gmail/: README.md  manifest.yaml  provider.py  pyproject.toml
app/gmail/tests/: test_credentials_contract.py  test_provider.py
app/hex/: README.md  manifest.yaml  pyproject.toml
app/slack/: README.md  catalog.yaml  manifest.yaml  provider.py  pyproject.toml
app/slack/docs/: events.mdx  index.mdx
app/slack/internals/: agent.py  client.py  config.py  models.py  operations.py  reply_ref.py  reply_ref_auth.py
app/slack/tests/: test_client.py  test_files_get_url_validation.py  test_operations_url_validation.py  test_provider.py  test_provider_external_files.py
app/slack_v2/: README.md  manifest.yaml  provider.py  pyproject.toml
app/slack_v2/internals/: client.py  events.py  smoke_metrics.py  store.py
app/slack_v2/tests/: test_provider.py
app/vercel/: README.md  catalog.yaml  manifest.yaml  provider.py  pyproject.toml
app/vercel/internals/: blob.py
app/vercel/tests/: test_provider.py
bigquery/: PYTHON_PROTOBUF7_BLOCKERS.md  catalog.yaml  go.mod  go.sum  plugin.yaml  provider.go  provider.py  pyproject.toml  query.go
bigquery/cmd/: main.go
bigquery/internals/: __init__.py  client.py  models.py
bigquery/tests/: test_client.py  test_provider.py
datastore/internal/rust_sqlstore/: Cargo.toml
datastore/mysql/: Cargo.toml  manifest.yaml  mysql.go  plugin.yaml  provider.go  provider.yaml
datastore/mysql/src/: lib.rs
datastore/mysql/tests/: smoke.rs
datastore/postgres/: Cargo.toml  manifest.yaml  plugin.yaml  postgres.go  provider.go  provider.yaml
datastore/postgres/src/: lib.rs
datastore/postgres/tests/: smoke.rs
datastore/relationaldb/: Cargo.toml  manifest.yaml  provider.go  relationaldb.go  relationaldb_test.go  sql.go
datastore/relationaldb/src/: convert.rs  lib.rs  lifecycle.rs  query.rs  schema.rs  server.rs  store.rs
datastore/sqlite/: Cargo.toml  manifest.yaml  plugin.yaml  provider.go  provider.yaml  sqlite.go  sqlite_test.go  warnings.go
datastore/sqlite/src/: lib.rs
datastore/sqlite/tests/: oauth_registration.rs  smoke.rs
model/anthropic/: README.md  manifest.yaml  provider.py  pyproject.toml
model/anthropic/schemas/: config.schema.yaml
model/anthropic/tests/: test_provider.py
plugins/ashby/: README.md  catalog.yaml  manifest.yaml  openapi.yaml  plugin.yaml  provider.yaml  pyproject.toml
plugins/ashby/internals/: __init__.py  client.py
plugins/ashby/tests/: test_provider.py
plugins/bigquery/: README.md  catalog.yaml  go.mod  go.sum  manifest.yaml  plugin.yaml  provider.py  provider.yaml  pyproject.toml
plugins/bigquery/cmd/: main.go
plugins/bigquery/internals/: client.py
plugins/bigquery/tests/: test_provider.py
plugins/deluxe/: catalog.yaml  plugin.yaml  provider.py  pyproject.toml
plugins/deluxe/internals/: __init__.py  file_naming.py  sftp_client.py
plugins/deluxe/schemas/: config.schema.yaml
plugins/deluxe/tests/: test_provider.py
plugins/github/: README.md  catalog.yaml  manifest.yaml  plugin.yaml  provider.py  provider.yaml  pyproject.toml
plugins/github/internals/: agent.py  client.py  config.py  constants.py  errors.py  helpers.py  identity.py  manual_trigger.py  operations.py  policy.py  policy_metadata.py  preferences.py  (+3 more)
plugins/gmail/: README.md  catalog.yaml  go.mod  go.sum  manifest.yaml  ops.go  plugin.yaml  provider.go  provider.py  provider.yaml  provider_test.go  pyproject.toml
plugins/hex/: README.md  catalog.yaml  manifest.yaml  plugin.yaml  provider.py  provider.yaml  pyproject.toml
plugins/looker/: README.md  manifest.yaml  provider.py  pyproject.toml
plugins/retool/: README.md  catalog.yaml  manifest.yaml  openapi.yaml  provider.py  pyproject.toml
plugins/slack/: README.md  catalog.yaml  go.mod  go.sum  manifest.yaml  plugin.yaml  provider.py  provider.yaml  pyproject.toml
plugins/ugi/: catalog.yaml  plugin.yaml  provider.py  pyproject.toml
plugins/vercel/: README.md  build.sh  catalog.yaml  manifest.yaml  provider.py  pyproject.toml
(+1424 files in other folders)
