[build-system]
requires = ["setuptools==82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "gestalt-bigquery"
version = "0.0.1a3"
requires-python = "==3.14.*"
dependencies = [
  "gestalt",
  "google-auth==2.49.1",
  "google-cloud-bigquery==3.41.0",
]

[dependency-groups]
dev = [
  "ty==0.0.29",
  "vulture==2.16",
]

[tool.uv.sources]
gestalt = { git = "ssh://git@github.com/valon-technologies/gestalt.git", rev = "89cf7dceca1804a340fe14f066337c2518236f55", subdirectory = "sdk/python" }

[tool.gestalt]
plugin = "provider"
