[project]
name = "gestalt-agent-claude"
version = "0.0.1a23"
requires-python = "==3.14.*"
dependencies = [
  "claude-agent-sdk==0.1.71",
  "jsonschema==4.26.0",
  "gestalt-sdk",
]

[dependency-groups]
dev = [
  "ruff==0.15.9",
  "ty==0.0.29",
  "vulture==2.16",
]

[tool.uv]
package = false
override-dependencies = [
  "typing-extensions>=4.14.1",
]

[tool.uv.sources]
gestalt-sdk = { git = "https://github.com/valon-technologies/gestalt.git", rev = "9f1f3a9dd427aa8584a613f14e2980d2c6b517fc", subdirectory = "sdk/python" }

[tool.gestalt]
plugin = "provider"
agent = "provider"

[tool.gestalt.ci]
vulture-ignore-names = [
  "configure",
  "metadata",
  "ListTools",
  "ExecuteTool",
  "ResolveConnection",
  "create_turn",
  "get_interaction",
  "list_interactions",
  "resolve_interaction",
  "get_capabilities",
  "setUpModule",
  "tearDownModule",
  "CreateObjectStore",
  "Get",
  "Add",
  "Put",
  "Delete",
  "Clear",
  "GetAll",
  "OpenCursor",
  "Transaction",
]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.format]
skip-magic-trailing-comma = true
