[project]
name = "gestalt-agent-claude"
version = "0.0.1a23"
requires-python = "==3.14.*"
dependencies = [
  "claude-agent-sdk==0.1.71",
  "jsonschema==4.26.0",
  "gestalt-sdk",
]

[dependency-groups]
dev = [
  "ruff==0.15.9",
  "ty==0.0.29",
  "vulture==2.16",
]

[tool.uv]
package = false
override-dependencies = [
  "typing-extensions>=4.14.1",
]

[tool.uv.sources]
gestalt-sdk = { git = "https://github.com/valon-technologies/gestalt.git", rev = "f8b4b8bfb995206682bb45a57e6f082078b4e56e", subdirectory = "sdk/python" }

[tool.gestalt]
provider = "provider:provider"

[tool.gestalt.ci]
vulture-ignore-names = [
  "configure",
  "metadata",
  "Invoke",
  "ResolveConnection",
  "create_turn",
  "get_interaction",
  "list_interactions",
  "resolve_interaction",
  "get_capabilities",
  "setUpModule",
  "tearDownModule",
  "CreateObjectStore",
  "Get",
  "Add",
  "Put",
  "Delete",
  "Clear",
  "GetAll",
  "OpenCursor",
  "Transaction",
]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.format]
skip-magic-trailing-comma = true
