[project]
name = "gestalt-agent-codex"
version = "0.0.1a2"
requires-python = "==3.14.*"
dependencies = [
  "openai-agents==0.14.8",
  "mcp==1.27.0",
  "gestalt-sdk",
]

[dependency-groups]
dev = [
  "ruff==0.15.9",
  "ty==0.0.29",
  "vulture==2.16",
]

[tool.uv]
package = false
override-dependencies = [
  "typing-extensions>=4.14.1",
]

[tool.uv.sources]
gestalt-sdk = { git = "https://github.com/valon-technologies/gestalt.git", branch = "main", subdirectory = "sdk/python" }

[tool.gestalt]
plugin = "provider"
agent = "provider"

[tool.gestalt.ci]
vulture-ignore-names = [
  "CreateSession",
  "GetSession",
  "ListSessions",
  "UpdateSession",
  "CreateTurn",
  "GetTurn",
  "ListTurns",
  "CancelTurn",
  "ListTurnEvents",
  "GetInteraction",
  "ListInteractions",
  "ResolveInteraction",
  "GetCapabilities",
  "configure",
  "metadata",
  "ListTools",
  "ExecuteTool",
  "handle_call_tool",
  "should_exit",
  "setUpModule",
  "tearDownModule",
]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.format]
skip-magic-trailing-comma = true
