[project]
name = "gestalt-agent-codex"
version = "0.0.1a5"
requires-python = "==3.14.*"
dependencies = [
  "openai-agents==0.14.8",
  "mcp==1.27.0",
  "jsonschema==4.26.0",
  "gestalt-sdk",
]

[dependency-groups]
dev = [
  "ruff==0.15.9",
  "ty==0.0.29",
  "vulture==2.16",
]

[tool.uv]
package = false
override-dependencies = [
  "typing-extensions>=4.14.1",
]

[tool.uv.sources]
gestalt-sdk = { git = "https://github.com/valon-technologies/gestalt.git", rev = "993e8fd91b566423efb48b14c7e8991dce532b86", subdirectory = "sdk/python" }

[tool.gestalt]
plugin = "provider"
agent = "provider"

[tool.gestalt.ci]
vulture-ignore-names = [
  "configure",
  "metadata",
  "ListTools",
  "ExecuteTool",
  "ResolveConnection",
  "create_turn",
  "get_interaction",
  "list_interactions",
  "resolve_interaction",
  "get_capabilities",
  "handle_call_tool",
  "should_exit",
  "setUpModule",
  "tearDownModule",
]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.format]
skip-magic-trailing-comma = true
