[package]
name = "gestalt-agent-hermes"
version = "0.0.1-alpha.1"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "fake-acp"
path = "tests/fixtures/fake_acp.rs"

[dependencies]
agent-client-protocol = "=0.11.1"
agent-client-protocol-tokio = "=0.11.1"
axum = "0.8"
gestalt = { package = "gestalt-sdk", git = "https://github.com/valon-technologies/gestalt.git", rev = "592268ce2dfa48580e8d05fdb42ffecdc5a12cc9" }
getrandom = "0.4"
jsonschema = { version = "0.46.5", default-features = false }
rmcp = { version = "1.6", features = ["transport-streamable-http-server"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
tokio-util = "0.7"
tonic = { version = "0.14", features = ["tls-native-roots", "tls-ring"] }

[dev-dependencies]
prost-types = "0.14"
tempfile = "3"
tokio-stream = { version = "0.1", features = ["net"] }
