[project]
name = "gestalt-bigquery"
version = "0.0.1a7"
requires-python = "==3.14.*"
dependencies = [
  "gestalt-sdk",
  "google-auth==2.53.0",
  "google-cloud-bigquery==3.41.0",
]

[dependency-groups]
dev = [
  "ruff==0.15.9",
  "ty==0.0.37",
  "vulture==2.16",
]

[tool.uv]
package = false

[tool.uv.sources]
gestalt-sdk = { git = "https://github.com/valon-technologies/gestalt.git", rev = "c33e8d9c6252797e3b307b2f9d13ed3ad2423265", subdirectory = "sdk/python" }

[tool.gestalt]
provider = "provider"

[tool.gestalt.ci]
vulture-ignore-names = ["type", "job_complete"]
