[project]
name = "gestalt-github"
version = "0.0.1a30"
requires-python = "==3.14.*"
dependencies = [
  "cryptography==46.0.7",
  "gestalt-sdk",
]

[dependency-groups]
dev = [
  "ruff==0.15.9",
  "ty==0.0.29",
  "vulture==2.16",
]

[tool.uv]
package = false

[tool.uv.sources]
gestalt-sdk = { git = "https://github.com/valon-technologies/gestalt.git", rev = "c55fa7d22c5c93e07ad976f2c8ca7d359bcc0dfa", subdirectory = "sdk/python" }

[tool.gestalt]
provider = "provider:app"

[tool.gestalt.ci]
vulture-ignore-names = [
  "configure",
  "migration_options",
  "resolve_http_subject",
  "github_events_handle",
  "maintenance_reconcile_cache",
  "bot_get_repository",
  "bot_search_code",
  "bot_get_content",
  "bot_list_commits",
  "bot_compare_refs",
  "bot_commit_files",
  "bot_open_pull_request",
  "bot_close_pull_request",
  "bot_create_pull_request",
  "bot_create_pull_request_review",
  "bot_list_pull_request_reviews",
  "bot_list_pull_request_review_threads",
  "bot_resolve_pull_request_review_thread",
  "bot_create_pull_request_conversation_comment",
  "bot_create_issue",
  "bot_create_issue_comment",
  "bot_update_issue",
  "bot_get_issue",
  "bot_list_issues",
  "bot_add_reaction",
  "bot_add_labels",
  "bot_remove_labels",
  "bot_request_reviewers",
  "bot_get_pull_request",
  "bot_list_pull_request_files",
  "bot_list_pull_request_commits",
  "bot_get_check_run",
  "bot_create_check_run",
  "bot_update_check_run",
  "bot_list_check_suite_check_runs",
  "bot_list_commit_check_runs",
  "bot_list_check_run_annotations",
  "bot_get_workflow_run",
  "bot_list_workflow_run_jobs",
  "bot_list_workflow_runs",
  "bot_get_workflow_job_logs",
  "bot_list_issue_comments",
  "bot_search_pull_requests",
  "bot_get_merge_queue",
  "bot_list_pull_requests",
  "bot_list_pull_requests_for_commit",
  "bot_list_org_members",
  "bot_list_repo_contributors",
  "bot_get_user",
]
