[project]
name = "gestalt-gmail"
version = "0.0.1a16"
requires-python = "==3.14.*"
dependencies = ["gestalt-sdk"]

[dependency-groups]
dev = [
  "ruff==0.15.9",
  "ty==0.0.37",
  "vulture==2.16",
]

[tool.uv]
package = false

[tool.uv.sources]
gestalt-sdk = { git = "https://github.com/valon-technologies/gestalt.git", rev = "c33e8d9c6252797e3b307b2f9d13ed3ad2423265", subdirectory = "sdk/python" }

[tool.gestalt]
provider = "provider:app"

[tool.gestalt.ci]
vulture-ignore-names = [
  "messages_list",
  "messages_get",
  "messages_attachments_get",
  "threads_get",
  "labels_list",
  "get_profile",
  "messages_send",
  "drafts_create",
  "drafts_update",
  "drafts_send",
  "messages_reply",
  "messages_forward",
]
