[project]
name = "gestalt-hex"
version = "0.0.1a9"
requires-python = "==3.14.*"
dependencies = ["gestalt-sdk"]

[dependency-groups]
dev = [
  "ruff==0.15.9",
  "ty==0.0.29",
  "vulture==2.16",
]

[tool.uv]
package = false

[tool.uv.sources]
gestalt-sdk = { git = "https://github.com/valon-technologies/gestalt.git", rev = "491ef63e5d8305b754927d7c60c388703b78c1d8", subdirectory = "sdk/python" }

[tool.gestalt]
provider = "provider"

[tool.gestalt.ci]
vulture-ignore-names = [
  "CREATED_DATE",
  "EVIDENCE_COUNT",
  "LAST_SOURCE_ADDED_DATE",
  "ASC",
  "DESC",
  "OPEN",
  "IN_PROGRESS",
  "RESOLVED",
  "project_export",
  "project_import",
  "project_run_draft",
  "cell_run",
]
