[project]
name = "gestalt-slack"
version = "0.0.1a3"
requires-python = "==3.14.*"
dependencies = ["gestalt-sdk"]

[dependency-groups]
dev = [
  "ruff==0.15.9",
  "ty==0.0.37",
  "vulture==2.16",
]

[tool.uv]
package = false

[tool.uv.sources]
gestalt-sdk = { git = "https://github.com/valon-technologies/gestalt.git", branch = "main", subdirectory = "sdk/python" }

[tool.gestalt]
provider = "provider"

[tool.gestalt.ci]
vulture-ignore-names = [
  "configure",
  "resolve_http_subject",
  "slack_events_handle",
  "slack_interactions_handle",
  "slack_interactions_request",
  "slack_events_reply",
  "slack_events_reply_session_started",
  "slack_events_set_status",
  "slack_events_delete_status",
  "slack_events_add_reaction",
  "slack_events_remove_reaction",
  "slack_events_set_assistant_status",
  "slack_events_clear_assistant_status",
  "slack_events_set_thread_title",
  "slack_events_set_suggested_prompts",
  "slack_events_start_stream",
  "slack_events_append_stream",
  "slack_events_stop_stream",
  "chat_post_message",
  "conversations_get_message",
  "conversations_find_user_mentions",
  "conversations_get_thread_participants",
  "conversations_get_thread_context",
  "files_get",
  "redirect_request",
  "Name",
  "WorkflowEvent",
]
