[project]
name = "gestalt-slack-v2"
version = "0.0.1a1"
requires-python = "==3.14.*"
dependencies = ["gestalt-sdk"]

[dependency-groups]
dev = [
  "ruff==0.15.9",
  "ty==0.0.37",
  "vulture==2.16",
]

[tool.uv]
package = false

[tool.uv.sources]
gestalt-sdk = { git = "https://github.com/valon-technologies/gestalt.git", rev = "7c27e618694975b5045ffa3de8ce8aeaaf9a425c", subdirectory = "sdk/python" }

[tool.gestalt]
provider = "provider:app"

[tool.gestalt.ci]
vulture-ignore-names = ["handle_slack_event"]
