[project]
name = "gestalt-vercel"
version = "0.0.1a13"
requires-python = "==3.14.*"
dependencies = ["gestalt-sdk"]

[dependency-groups]
dev = [
  "ruff==0.15.9",
  "ty==0.0.29",
  "vulture==2.16",
]

[tool.uv]
package = false

[tool.uv.sources]
gestalt-sdk = { git = "https://github.com/valon-technologies/gestalt.git", rev = "78036dc64b489a0d9d6af6862e68c7ce54cca22b", subdirectory = "sdk/python" }

[tool.gestalt]
provider = "provider:app"

[tool.gestalt.ci]
vulture-ignore-names = [
  "PUBLIC",
  "blob_put",
  "blob_get",
  "blob_head",
  "blob_list",
  "blob_delete",
  "blob_copy",
  "team_members_invite",
]
