[package]
name = "gestalt_datastore_mysql"
version = "0.0.1-alpha.10"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
gestalt_datastore_sqlstore = { path = "../internal/rust_sqlstore" }
gestalt_plugin_sdk = { git = "https://github.com/valon-technologies/gestalt.git", rev = "3cb9b8e57c9f033e8f7534c4b62ff3884cb54979", package = "gestalt_plugin_sdk" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
prost-types = "0.14"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
