[package]
name = "gestalt_datastore_postgres"
version = "0.0.1-alpha.1"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
gestalt_datastore_sqlstore = { path = "../internal/rust_sqlstore" }
gestalt_plugin_sdk = { git = "https://github.com/valon-technologies/gestalt.git", rev = "39419ebbc89a0f45b734ac86d1119568e180f0e6", package = "gestalt_plugin_sdk" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
prost-types = "=0.12.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
