[package]
name = "gestalt-provider-relationaldb"
version = "0.0.1-alpha.1"
edition = "2024"
rust-version = "1.85"

[lib]
path = "src/lib.rs"

[dependencies]
gestalt = { path = "../../../gestalt/sdk/rust" }
sqlx = { version = "0.8", features = ["runtime-tokio", "any", "postgres", "mysql", "sqlite"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "time"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = { version = "0.14", features = ["transport"] }
libc = "0.2"
prost-types = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
