[package]
name = "gestalt_datastore_sqlite"
version = "0.0.1-alpha.7"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
gestalt_datastore_sqlstore = { path = "../internal/rust_sqlstore" }
gestalt_plugin_sdk = { git = "https://github.com/valon-technologies/gestalt.git", rev = "2855f09f817c139a9c737efcef5d5f5338d226f4", package = "gestalt_plugin_sdk" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
prost-types = "0.14"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
