[project]
name = "gestalt-model-anthropic"
version = "0.0.1a1"
requires-python = "==3.14.*"
dependencies = [
  "anthropic==0.102.0",
  "gestalt-sdk",
]

[dependency-groups]
dev = [
  "ruff==0.15.9",
  "ty==0.0.35",
  "vulture==2.16",
]

[tool.uv]
package = false
override-dependencies = [
  "typing-extensions>=4.14.1",
]

[tool.uv.sources]
gestalt-sdk = { git = "https://github.com/valon-technologies/gestalt.git", branch = "main", subdirectory = "sdk/python" }

[tool.gestalt]
provider = "provider"
model = "provider"

[tool.gestalt.ci]
vulture-ignore-names = [
  "configure",
  "metadata",
  "warnings",
  "get_capabilities",
]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.format]
skip-magic-trailing-comma = true
