[project]
name = "gestalt-bigquery"
version = "0.0.1a1"
requires-python = "==3.14.*"
dependencies = [
  "gestalt-sdk",
  "google-auth==2.49.2",
  "google-cloud-bigquery==3.41.0",
]

[dependency-groups]
dev = [
  "ruff==0.15.9",
  "ty==0.0.29",
  "vulture==2.16",
]

[tool.uv]
package = false

[tool.uv.sources]
gestalt-sdk = { git = "https://github.com/valon-technologies/gestalt.git", branch = "main", subdirectory = "sdk/python" }

[tool.gestalt]
plugin = "provider"

[tool.gestalt.ci]
vulture-ignore-names = ["type", "job_complete"]
