[project]
name = "gestalt-github"
version = "0.0.1a18"
requires-python = "==3.14.*"
dependencies = [
  "cryptography==46.0.7",
  "gestalt-sdk",
]

[dependency-groups]
dev = [
  "ruff==0.15.9",
  "ty==0.0.29",
  "vulture==2.16",
]

[tool.uv]
package = false

[tool.uv.sources]
gestalt-sdk = { git = "https://github.com/valon-technologies/gestalt.git", branch = "main", subdirectory = "sdk/python" }

[tool.gestalt]
provider = "provider"

[tool.gestalt.ci]
vulture-ignore-names = [
  "configure",
  "post_connect",
  "resolve_http_subject",
  "github_events_handle",
  "bot_commit_files",
  "bot_open_pull_request",
  "bot_create_pull_request",
  "bot_create_issue_comment",
  "bot_get_check_run",
  "bot_list_check_run_annotations",
  "bot_get_workflow_run",
  "bot_list_workflow_run_jobs",
]
