[project]
name = "gestalt-gmail"
version = "0.0.1a4"
requires-python = "==3.14.*"
dependencies = ["gestalt"]

[dependency-groups]
dev = [
  "ruff==0.15.9",
  "ty==0.0.29",
  "vulture==2.16",
]

[tool.uv]
package = false

[tool.uv.sources]
gestalt = { git = "https://github.com/valon-technologies/gestalt.git", rev = "b02e2baadb95c8a638f96046b4f089517681fb6e", subdirectory = "sdk/python" }

[tool.gestalt]
plugin = "provider"

[tool.gestalt.ci]
vulture-ignore-names = [
  "messages_send",
  "messages_create_draft",
  "messages_reply",
  "messages_forward",
]
