[project]
name = "gestalt-gmail"
version = "0.0.1a4"
requires-python = "==3.14.*"
dependencies = ["gestalt"]

[dependency-groups]
dev = [
  "ruff==0.15.9",
  "ty==0.0.29",
  "vulture==2.16",
]

[tool.uv]
package = false

[tool.uv.sources]
gestalt = { git = "https://github.com/valon-technologies/gestalt.git", rev = "sdk/python/v0.0.1-alpha.4", subdirectory = "sdk/python" }

[tool.gestalt]
plugin = "provider"

[tool.gestalt.ci]
vulture-ignore-names = [
  "messages_send",
  "messages_create_draft",
  "messages_reply",
  "messages_forward",
]
