[project]
name = "gestalt-retool"
version = "0.0.1a1"
requires-python = "==3.14.*"
dependencies = ["gestalt-sdk"]

[dependency-groups]
dev = [
  "ruff==0.15.9",
  "ty==0.0.35",
  "vulture==2.16",
]

[tool.uv]
package = false

[tool.uv.sources]
gestalt-sdk = { git = "https://github.com/valon-technologies/gestalt.git", branch = "main", subdirectory = "sdk/python" }

[tool.gestalt]
provider = "provider"

[tool.gestalt.ci]
vulture-ignore-names = [
  "apps_export_app",
  "custom_component_libraries_clone_repository",
  "terraform_generate_configuration",
  "encoding",
  "size_bytes",
  "content_base64",
  "parsed_json",
]
