[project]
name = "gestalt-slack"
version = "0.0.1a1"
requires-python = "==3.14.*"
dependencies = ["gestalt-sdk==0.0.1a12"]

[dependency-groups]
dev = [
  "ruff==0.15.9",
  "ty==0.0.29",
  "vulture==2.16",
]

[tool.uv]
package = false

[tool.gestalt]
plugin = "provider"

[tool.gestalt.ci]
vulture-ignore-names = [
  "configure",
  "post_connect",
  "resolve_http_subject",
  "slack_events_handle",
  "conversations_get_message",
  "conversations_find_user_mentions",
  "conversations_get_thread_participants",
]
