[project]
name = "gestalt-slack"
version = "0.0.1a3"
requires-python = "==3.14.*"
dependencies = ["gestalt-sdk"]

[dependency-groups]
dev = [
  "ruff==0.15.12",
  "ty==0.0.29",
  "vulture==2.16",
]

[tool.uv]
package = false

[tool.uv.sources]
gestalt-sdk = { git = "https://github.com/valon-technologies/gestalt.git", branch = "main", subdirectory = "sdk/python" }

[tool.gestalt]
plugin = "provider"

[tool.gestalt.ci]
vulture-ignore-names = [
  "configure",
  "post_connect",
  "resolve_http_subject",
  "slack_events_handle",
  "slack_events_reply",
  "conversations_get_message",
  "conversations_find_user_mentions",
  "conversations_get_thread_participants",
]
