[project]
name = "gestalt-slack"
version = "0.0.1a3"
requires-python = "==3.14.*"
dependencies = ["gestalt-sdk"]

[dependency-groups]
dev = [
  "ruff==0.15.9",
  "ty==0.0.29",
  "vulture==2.16",
]

[tool.uv]
package = false

[tool.uv.sources]
gestalt-sdk = { git = "https://github.com/valon-technologies/gestalt.git", branch = "main", subdirectory = "sdk/python" }

[tool.gestalt]
provider = "provider"

[tool.gestalt.ci]
vulture-ignore-names = [
  "configure",
  "post_connect",
  "resolve_http_subject",
  "slack_events_handle",
  "slack_events_reply",
  "slack_events_set_status",
  "slack_events_delete_status",
  "slack_events_add_reaction",
  "slack_events_remove_reaction",
  "conversations_get_message",
  "conversations_find_user_mentions",
  "conversations_get_thread_participants",
  "conversations_get_thread_context",
  "files_get",
  "redirect_request",
]
